# Simple-OpenGL-FPS

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  imgui.ini
include/: utils.h
include/animation/: animation.h  animator.h  animdata.h  bone.h
include/application/: Application.h  FPSGame.h
include/assimp/: revision.h
include/camera/: camera.h
include/entities/: weapon.h
include/glad/: glad.h
include/light/: light.h  light_pbr.h
include/model/: mesh.h  mesh_gltf.h  model.h  model_gltf.h
include/player/: player.h
include/render_engine/: IRenderEngine.h  OpenGLRenderEngine.h  engine_globals.h  gui_manager.h  renderer.h  scene.h
include/shader/: shader.h
include/world/: entity.h  scene.h
resources/environments/: italy.glb
resources/shaders/core/: pbr.fs  pbr.vs  shadow.vs
resources/shaders/frame/: frame.vs
resources/shaders/skybox/: equirect_to_cubemap.fs  equirect_to_cubemap.vs  skybox.fs
src/: glad.c
src/animation/: animation.cpp  bone.cpp
src/application/: Application.cpp  FPSGame.cpp
src/demo/: demo.cpp
src/model/: model_gltf.cpp
src/my_render_engine/: my_render_engine.cpp
src/render_engine/: OpenGLRenderEngine.cpp  gui_manager.cpp  render_engine.cpp  renderer.cpp  scene.cpp
src/world/: scene.cpp
